--- a/apps/express/public/chat.html
+++ b/apps/express/public/chat.html
@@ -10,16 +10,41 @@
     <div id="sidebar" class="chat_sidebar"></div>
     <div class="chat_main">
       <div id="messages" class="chat_messages"></div>
-      <form id="form_container">
-        <input
-          type="text"
-          id="message"
-          placeholder="메시지 입력하세요"
-          required
-        />
-        <button id="send" type="submit">전송</button>
-      </form>
+
+      <div class="chat_footer">
+        <form id="message-form" class="message_form">
+          <input
+            id="input-message"
+            name="message"
+            placeholder="메시지 입력하세요"
+            required
+          />
+          <button id="send-message" name="send-message" type="submit">
+            전송
+          </button>
+        </form>
+      </div>
     </div>
-    <script type="module" src="./js/chat.js"></script>
+    <script id="sidebar-template" type="text/html">
+      <h2 class="room-title">방이름 : {{room}}</h2>
+      <p class="list-title">참여자</p>
+      <ul class="users-list">
+        {{#users}} {{username}} {{/users}}
+      </ul>
+    </script>
+
+    <script id="message-template" type="text/html">
+      <div class="message">
+        <p>
+          <span class="message-name">{{username}}</span>
+          <span class="message-meta">{{createdAt}}</span>
+        </p>
+        <p>{{message}}</p>
+      </div>
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <script src="../socket.io/socket.io.js"></script>
+    <script src="./js/chat.js"></script>
   </body>
 </html>
