--- a/apps/express/public/index.html
+++ b/apps/express/public/index.html
@@ -21,6 +21,7 @@
         </form>
       </div>
     </div>
-    <script type="module" src="/src/main.js"></script>
+    <script src="./../../socket.io/socket.io.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
